--- a/522774998/web/index.html
+++ b/522774998/web/index.html
@@ -20,10 +20,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="chat_journal">
+  <meta name="apple-mobile-web-app-title" content="try_bloc_app">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>chat_journal</title>
+  <title>try_bloc_app</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
