--- a/301555577/web/index.html
+++ b/301555577/web/index.html
@@ -23,10 +23,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="diary">
+  <meta name="apple-mobile-web-app-title" content="sticky_notes">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>diary</title>
+  <title>sticky_notes</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
